# oiledmachine-overlay

./: .gitignore  CONTRIBUTING.md  EBUILD_STYLE_GUIDELINE.md  OVERLAY_COMPARISON.md  README.md  SECURITY.md  SUPPORT_MATRIX.md  autobump-patch-versions.sh  check-ebuild-update  check-ebuild-update-scrapers  lint-ebolt  lint-epgo  lint-tpgo  lint-uopts  lintrepo  redigest  use-linter
dev-dotnet.old/: DO_NOT_USE.txt
dev-python/hf-xet/files/1.5.0/: Cargo.toml
dev-python/hf-xet/files/1.5.0/git_xet/: Cargo.toml
dev-python/hf-xet/files/1.5.0/hf_xet/: Cargo.toml
dev-python/hf-xet/files/1.5.0/simulation/: Cargo.toml
dev-python/hf-xet/files/1.5.0/simulation/chunk_cache_bench/: Cargo.toml
dev-python/hf-xet/files/1.5.0/wasm/hf_xet_thin_wasm/: Cargo.toml
dev-python/hf-xet/files/1.5.0/wasm/hf_xet_wasm/: Cargo.toml
dev-python/hf-xet/files/1.5.0/xet_client/: Cargo.toml
dev-python/hf-xet/files/1.5.0/xet_core_structures/: Cargo.toml
dev-python/hf-xet/files/1.5.0/xet_data/: Cargo.toml
dev-python/hf-xet/files/1.5.0/xet_pkg/: Cargo.toml
dev-python/hf-xet/files/1.5.0/xet_runtime/: Cargo.toml
dev-util/cargo-pgrx/files/0.16.1/pgrx-macros/: Cargo.toml
dev-util/cargo-pgrx/files/0.17.0/pgrx-examples/subtrans_infos/: Cargo.toml
dev-util/cargo-pgrx/files/0.17.0/pgrx-pg-config/: Cargo.toml
dev-util/cargo-pgrx/files/0.18.0/pgrx-bench/: Cargo.toml
dev-util/cargo-pgrx/files/0.18.0/pgrx-unit-tests/: Cargo.toml
docs/: 2020_POLICY.md  2023_POLICY.md  2025_POLICY.md  BROKEN.md  EBUILD_DOCUMENTATION.md  EBUILD_LICENSES.md  EBUILD_PACKAGE_DEVEL_GUIDE.md  EBUILD_STYLE_GUIDELINE.md  LEGACY_PACKAGES.md  OVERLAY_COMPARISON.md  PACKAGE_LIST.md  PGO_BOLT.md  QUALITY.md  SUPPORT_MATRIX.md
eclass/: abseil-cpp.eclass  aocc.eclass  bazel.eclass  blender-multibuild.eclass  blender-v2.79.eclass  blender-v2.80.eclass  blender-v2.81.eclass  blender-v2.82.eclass  blender-v2.83.eclass  blender-v2.90.eclass  blender-v2.91.eclass  blender-v2.92.eclass  blender-v2.93.eclass  blender-v3.0.eclass  blender-v3.1.eclass  blender-v3.2.eclass  blender-v3.3.eclass  blender-v3.4.eclass  blender-v3.5.eclass  blender-v3.6.eclass  blender-v4.0.eclass  blender-v4.1.eclass  blender-v4.2.eclass  blender-v4.3.eclass  blender-v4.4.eclass  blender-v4.5.eclass  blender-v5.0.eclass  blender-v5.1.eclass  blender-v5.2.eclass  blender-vx.xx-common.eclass  blender.eclass  box2d.eclass  bun.eclass  caret.eclass  cargo.eclass  cflags-depends.eclass  cflags-hardened.eclass  check-compiler-switch.eclass  check-glibcxx-ver.eclass  check-linker.eclass  (+187 more)
gui-apps/wayle/files/0.3.0/: Cargo.toml
gui-apps/wayle/files/0.3.0/crates/wayle-config/: Cargo.toml
gui-apps/wayle/files/0.3.0/crates/wayle-derive/: Cargo.toml
gui-apps/wayle/files/0.3.0/crates/wayle-i18n/: Cargo.toml
gui-apps/wayle/files/0.3.0/crates/wayle-icons/: Cargo.toml
gui-apps/wayle/files/0.3.0/crates/wayle-idle-inhibit/: Cargo.toml
gui-apps/wayle/files/0.3.0/crates/wayle-ipc/: Cargo.toml
gui-apps/wayle/files/0.3.0/crates/wayle-settings/: Cargo.toml
gui-apps/wayle/files/0.3.0/crates/wayle-shell/: Cargo.toml
gui-apps/wayle/files/0.3.0/crates/wayle-styling/: Cargo.toml
gui-apps/wayle/files/0.3.0/crates/wayle-widgets/: Cargo.toml
gui-apps/wayle/files/0.3.0/wayle/: Cargo.toml
gui-wm/niri/files/26.04/: Cargo.toml
gui-wm/niri/files/26.04/niri-config/: Cargo.toml
gui-wm/niri/files/26.04/niri-ipc/: Cargo.toml
gui-wm/niri/files/26.04/niri-visual-tests/: Cargo.toml
licenses/: ALICE2  ALICE3  AMD-RADEON-PRORENDER-BLENDER-EULA-THIRD-PARTIES  AMD-SOFTWARE-EVALUATION-LICENSE-AGREEMENT-OBJECT-CODE-ONLY-RADEON-PRORENDER-SDK  AMDGPUPROEULA  AOCC-3.2-EULA  AOCC-4.0-EULA  AOCC-4.1-EULA  AOCC-4.2-EULA  ASSIMPNET  AVR-STUDIO-JUNGO  AVRSTUDIO-4.19  BoringSSL-ECC  GIF  (+137 more)
sys-kernel/scx-loader/files/1.1.2/: Cargo.toml
sys-kernel/scx-loader/files/1.1.2/crates/scx_loader/: Cargo.toml
sys-kernel/scx-loader/files/1.1.2/crates/scxctl/: Cargo.toml
sys-kernel/scx-loader/files/1.1.2/xtask/: Cargo.toml
www-client/surf/files/: LICENSES  Makefile.am  Makefile.am.2.0  configure.ac.0.6  configure.ac.2.0  mimehandler  ripdigg  ripfacebook  ripstream  riptwitch  ripustream  ripvimeo  ripyoutube  script.js  surf-0.6  surf-0.6-adblock.patch  surf-0.6-gtk2-1.patch  surf-0.6-gtk2-2.patch  surf-0.6-gtk3.patch  surf-0.6-r1  surf-0.6-search.patch  surf-0.6-webkit-2.0.4-4.patch  surf-0.6-webkit-2.0.4-7.patch  surf-2.0  surf-2.0-adblock.patch  surf-2.0-copyrights.patch  surf-2.0-search.patch  surf-2.1-gtk4.patch  surf-2.1-permission-requests-rework-01.patch  surf-2.1-permission-requests-rework-02.patch  surf-2.1-permission-requests-rework-v2-01.patch  surf-2.1-permission-requests-rework-v2-02.patch  surf-2.1-permission-requests-rework-v2.patch  surf-2.1-permission-requests-rework-v3-01.patch  surf-2.1-permission-requests-rework-v3-02.patch  surf-2.1-permission-requests-rework-v3.patch  surf-2.1-permission-requests-rework.patch  surf-2.1_p20231118-adblock.patch  surf-2.1_p20231118-gtk4.patch  surf-2.1_p20231118-permission-requests-rework-v3-01.patch  (+19 more)
www-client/surf/files/.trash2/: surf-0.6-adblock-debugtimer.patch  surf-0.6-copyright-2.patch  surf-0.6-copyrights.patch  surf-0.6-gtk2-3.patch  surf-0.6-gtk2-4.patch  surf-0.6-gtk2-5.patch  surf-0.6-hide-bg.patch  surf-0.6-webkit-2.0.4-1.patch  surf-0.6-webkit-2.0.4-2.patch  surf-0.6-webkit-2.0.4-3.patch  surf-0.6-webkit-2.0.4-5.patch  surf-0.6-webkit-2.0.4-6.patch  surf-adblock-a.patch  surf-adblock-b.patch  surf-adblockext.patch  surf-gtk3fix1.patch  surf-gtk3fix4.patch  surf-sslproxy.patch  surf-webkit2gtk1.patch  surf-webkit2gtk3.patch
www-client/surf/files/adblock/: LICENSE  LICENSE.EasyList  README.md  adblock  adblock.py  adblock.py.bak  adblockresource.py  block.py  block2.py  blocklists.py  blocksrv.py  convert.py  convert.py.bak  customrules  readme  string_matching.py  update.sh
www-client/surf/files/events/: page_before_request.sh  page_load_committed.sh  page_load_finished.sh
www-client/surf/files/licenses/: LICENSE.mod_autoopen  LICENSE.mod_link_hints  LICENSE.mod_searchengines  LICENSE.mod_simple_bookmarking_redux
(+25521 files in other folders)
