[workspace]
resolver = "2"
members = [
	"crates/wayle-config",
	"crates/wayle-derive",
	"crates/wayle-i18n",
	"crates/wayle-icons",
	"crates/wayle-idle-inhibit",
	"crates/wayle-ipc",
	"crates/wayle-settings",
	"crates/wayle-shell",
	"crates/wayle-styling",
	"crates/wayle-widgets",
	"wayle",
]
exclude = ["sandbox"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/wayle-rs/wayle"
license = "MIT"

[workspace.dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
bitflags = "2.9.4"
bytesize = "2"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.48", features = ["color", "derive"] }
console = "0.16"
derive_more = { version = "2.0.1", default-features = false, features = [
	"debug",
] }
dotenvy = "0.15"
fnv = "1.0"
futures = "0.3.31"
gdk-pixbuf = "0.21.2"
gdk4 = "0.10.1"
glib = "0.21.3"
glob = "0.3.2"
grass = "0.13.4"
gtk4 = { version = "0.10.1", features = ["v4_12"] }
gtk4-layer-shell = "0.7"
i18n-embed = { version = "0.16", features = [
	"desktop-requester",
	"fluent-system",
] }
i18n-embed-fl = "0.10"
indicatif = "0.18"
inventory = "0.3"
libc = "0.2.176"
libpulse-binding = "2.30.1"
minijinja = { version = "2.15", default-features = false, features = [
	"builtins",
	"serde",
] }
notify = "8"
palette = "0.7"
png = "0.18"
rand = "0.9.2"
relm4 = { version = "0.10", features = ["macros"] }
reqwest = { version = "0.13", default-features = false, features = [
	"charset",
	"json",
	"query",
	"rustls",
] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust-embed = "8"
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_json_path = "0.7"
smithay-client-toolkit = "0.20"
sourceview5 = "0.10.0"
sysinfo = { version = "0.33", default-features = false, features = [
	"component",
	"disk",
	"network",
	"system",
	"user",
] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.16"
toml = { version = "0.9.7", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-attributes = "0.1.30"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
unic-langid = "0.9"
wildcard = "0.3"
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }

wayle-audio = "0.1.2"
wayle-battery = "0.1.2"
wayle-bluetooth = "0.1.2"
wayle-brightness = "0.1.2"
wayle-cava = { version = "0.1.2", features = ["vendored"] }
wayle-core = "0.1.2"
wayle-hyprland = "0.1.2"
wayle-niri = "0.1.0"
wayle-media = "0.1.2"
wayle-network = "0.1.2"
wayle-notification = "0.1.3"
wayle-power-profiles = "0.1.2"
wayle-sysinfo = "0.1.2"
wayle-systray = "0.1.2"
wayle-traits = "0.1.2"
wayle-wallpaper = "0.1.3"
wayle-weather = "0.1.2"

wayle-config = { path = "crates/wayle-config" }
wayle-derive = { path = "crates/wayle-derive" }
wayle-i18n = { path = "crates/wayle-i18n" }
wayle-icons = { path = "crates/wayle-icons" }
wayle-idle-inhibit = { path = "crates/wayle-idle-inhibit" }
wayle-ipc = { path = "crates/wayle-ipc" }
wayle-shell = { path = "crates/wayle-shell" }
wayle-styling = { path = "crates/wayle-styling" }
wayle-widgets = { path = "crates/wayle-widgets" }

[workspace.lints.clippy]
cognitive_complexity = "warn"
expect_used = "deny"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
panic = "warn"
similar_names = "allow"
too_many_lines = "warn"
unwrap_used = "deny"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[profile.release]
lto = true
codegen-units = 1
