[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"

[profile.release]
lto = "thin"

[profile.release-tiny]
inherits = "release"
opt-level = "z"
lto = false
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 32
panic = "abort"
