[package]
name = "simulation"
version = "1.4.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "run_upload_scenario"
path = "src/bin/run_upload_scenario.rs"

[[bin]]
name = "run_upload_simulations"
path = "src/bin/run_upload_simulations.rs"

[dependencies]
xet-runtime = { path = "../xet_runtime" }
xet-client = { path = "../xet_client", features = ["simulation"] }

anyhow = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

bytes = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
smoke-test = []

[dev-dependencies]
tempfile = { workspace = true }
