[package]
name = "xet-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Async runtime, configuration, logging, and utility infrastructure for the Hugging Face Xet client tools."
readme = "README.md"
keywords = ["huggingface"]
categories = ["artificial-intelligence", "asynchronous"]

[lib]
name = "xet_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
const-str = "1.1"
ctor = { workspace = true }
dirs = { workspace = true }
humantime = { workspace = true }
git-version = { workspace = true }
konst = "0.4"
lazy_static = { workspace = true }
libc = { workspace = true }
more-asserts = { workspace = true }
oneshot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

console-subscriber = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[target.'cfg(unix)'.dependencies]
whoami = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
shellexpand = { workspace = true, features = ["path"] }
tokio = { workspace = true, features = [
    "time",
    "rt",
    "macros",
    "sync",
    "test-util",
    "io-util",
    "rt-multi-thread",
] }
tokio-util = { workspace = true, features = ["io"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }

[features]
strict = []
smoke-test = []
elevated_information_level = []
no-default-cache = []
fd-track = []
python = ["dep:pyo3"]
tokio-console = ["dep:console-subscriber"]
simulation = []

[[bin]]
name = "log_test_executable"
path = "tests/bin/log_test_executable.rs"

[dev-dependencies]
futures-util = { workspace = true }
rand = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tracing-test = { workspace = true }
