#LICENSE Portions Copyright 2019-2021 ZomboDB, LLC.
#LICENSE
#LICENSE Portions Copyright 2021-2023 Technology Concepts & Design, Inc.
#LICENSE
#LICENSE Portions Copyright 2023-2023 PgCentral Foundation, Inc. <contact@pgcentral.org>
#LICENSE
#LICENSE All rights reserved.
#LICENSE
#LICENSE Use of this source code is governed by the MIT license that can be found in the LICENSE file.

[package]
name = "pgrx-pg-config"
version = "0.17.0"
authors.workspace = true
license.workspace = true
description = "A Postgres pg_config wrapper for 'pgrx'"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pgrx-pg-config"
readme = "README.md"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml.workspace = true
eyre.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true

pathsearch = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
codepage = "0.1.2"
encoding_rs = "0.8.35"
winapi = { version = "0.3.9", features = ["winnls"] }
