[package]
name = "hf_xet_thin_wasm"
version = "1.4.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
xet-core-structures = { path = "../../xet_core_structures" }
xet-data = { path = "../../xet_data" }

getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "=0.2.100"

[package.metadata.cargo-machete]
ignored = ["getrandom"]
